--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,12 +3,12 @@
 
 /*========== Main Gradient Color : 
 background: rgb(179,0,255);
-background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
 ==========*/
 
 /*========== Button Hover Color Change (Inverse): 
 background: rgb(179,0,255);
-background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(231,0,255,1) 51%, rgba(255,0,254,1) 100%); 
+background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgbargba(192,192,192) 51%, rgba(255,0,254,1) 100%); 
 ==========*/
 
 /*========== 
@@ -22,7 +22,7 @@ Gradient Header Start
   line-height: 1;
   font-size: 2.8rem;
   margin-bottom: 0.6rem;
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -44,7 +44,7 @@ Gradient Header Start
   width: 90px;
   height: 5px;
   border-radius: 3px;
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
@@ -52,7 +52,7 @@ Gradient Header Start
 
 
 .gradient-title-sm {
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   font-weight: 600;
   font-size: 1.6rem;
   -webkit-background-clip: text;
@@ -63,7 +63,7 @@ Gradient Header Start
   display: inline-block;
   padding: 0.85rem 2rem;
   background-color: rgb(179,0,255);
-  background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(231,0,255,1) 51%, rgba(255,0,254,1) 100%);
+  background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgbargba(192,192,192) 51%, rgba(255,0,254,1) 100%);
   color: var(--light-one);
   border-radius: 2rem;
   font-size: 1.05rem;
@@ -74,7 +74,7 @@ Gradient Header Start
 
 .btn-header:hover {
   background-color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%); 
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%); 
 }
 
 /*========== 
@@ -127,7 +127,7 @@ main {
   height: 32px;
   width: 65px;
   background:rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   position: absolute;
   right: 0;
   border-radius: 20px;
@@ -155,7 +155,7 @@ main {
 }
 .dark-theme #toggle{
   background: rgb(179,0,255);
-  background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(231,0,255,1) 51%, rgba(255,0,254,1) 100%);
+  background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgbargba(192,192,192) 51%, rgba(255,0,254,1) 100%);
 }
 .dark-theme #toggle:after{
   background-color: transparent;
@@ -185,7 +185,7 @@ Theme End ==========*/
   --dark-one: #333;
   --dark-two: #7a7a7a;
   --main-color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   --light-one: #fff;
   --light-two: #f9fafb;
   --light-three: #f6f7fb;
@@ -355,7 +355,7 @@ img {
   width: 90px;
   height: 5px;
   border-radius: 3px;
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
@@ -380,7 +380,7 @@ img {
   display: inline-block;
   padding: 0.85rem 2rem;
   background-color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%); 
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%); 
   color: var(--light-one);
   border-radius: 2rem;
   font-size: 1.05rem;
@@ -391,7 +391,7 @@ img {
 
 .btn:hover {
   background-color: rgb(179,0,255);
-  background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(231,0,255,1) 51%, rgba(255,0,254,1) 100%);
+  background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgbargba(192,192,192) 51%, rgba(255,0,254,1) 100%);
 }
 
 .btn.small {
@@ -446,7 +446,7 @@ nav .container {
 
 .links a.active {
   background-color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%); 
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%); 
   color: var(--light-one);
   border-radius: 2rem;
   font-size: 1rem;
@@ -456,14 +456,14 @@ nav .container {
 
 .links a:hover {
   color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%); 
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%); 
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent; 
 }
 
 .links a.active:hover {
   color: rgb(255, 255, 255);
-  background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(231,0,255,1) 51%, rgba(255,0,254,1) 100%);
+  background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgbargba(192,192,192) 51%, rgba(255,0,254,1) 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent; 
 }
@@ -535,7 +535,7 @@ nav.open .links {
 .header-title {
   font-size: 3.8rem;
   line-height: 0.8;
-  background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(231,0,255,1) 51%, rgba(255,0,254,1) 100%); 
+  background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgbargba(192,192,192) 51%, rgba(255,0,254,1) 100%); 
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -543,7 +543,7 @@ nav.open .links {
 .header-text {
   font-size: 1.50rem;
   line-height: 1.6;
-  background: linear-gradient(-90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(-90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   padding: 20px 0;
@@ -735,7 +735,7 @@ header .circle {
   top: 0;
   left: 0;
   background-color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
 }
 
 .portfolio .title,
@@ -959,7 +959,7 @@ header .circle {
   top: 0;
   left: 0;
   background-color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   transition: 1s;
 }
 
@@ -993,7 +993,7 @@ header .circle {
 .records {
   position: relative;
   background-color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   padding: 5.2rem 0;
 }
 
@@ -1142,7 +1142,7 @@ header .circle {
 .blog-info h5 {
   font-size: 72px;
 
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: 400;
@@ -1218,13 +1218,13 @@ header .circle {
 .rate {
   display: flex;
   font-size: 1.4rem;
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);  -webkit-background-clip: text;
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);  -webkit-background-clip: text;
   margin-bottom: 1.5rem;
 }
 
 .rate i {
   margin-right: 0.3rem; 
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);  -webkit-background-clip: text;
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);  -webkit-background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -1256,7 +1256,7 @@ header .circle {
   bottom: 2.2rem;
   top: initial;
   font-size: 1.8rem;
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -1348,7 +1348,7 @@ header .circle {
   border-radius: 50%;
   background:
   rgb(179,0,255);
-background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(231,0,255,1) 51%, rgba(255,0,254,1) 100%); 
+background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgbargba(192,192,192) 51%, rgba(255,0,254,1) 100%); 
   color: var(--light-one);
   text-align: center;
   font-size: 1.4rem;
@@ -1472,7 +1472,7 @@ background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(231,0,255,1) 51%,
 
 .footer-links a:hover {
   color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent; 
 }
@@ -1500,7 +1500,7 @@ background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(231,0,255,1) 51%,
 .input-arrow {
   color: #fff;
   background-color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1510,7 +1510,7 @@ background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(231,0,255,1) 51%,
 
 .input-arrow:hover {
   background-color: rgb(179,0,255);
-  background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(231,0,255,1) 51%, rgba(255,0,254,1) 100%);
+  background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgbargba(192,192,192) 51%, rgba(255,0,254,1) 100%);
 }
 
 .focus {
@@ -1534,7 +1534,7 @@ background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(231,0,255,1) 51%,
 
 .copyright .text span {
   color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);  -webkit-background-clip: text;
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   cursor: pointer;
 }
@@ -1550,7 +1550,7 @@ background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(231,0,255,1) 51%,
 
 .followme h3 {
   color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: 500;
@@ -1561,14 +1561,14 @@ background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(231,0,255,1) 51%,
   width: 60px;
   height: 2px;
   background-color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   margin: 0 1.2rem;
   display: inline-block;
 }
 
 .social-media a {
   color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 1.3rem;
@@ -1578,7 +1578,7 @@ background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(231,0,255,1) 51%,
 
 .social-media a:hover {
   color: rgb(179,0,255);
-  background: linear-gradient(-90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(-90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -1595,7 +1595,7 @@ background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(231,0,255,1) 51%,
   height: 55px;
   width: 55px;
   background-color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   border-radius: 50%;
   color: #fff;
   font-size: 1.2rem;
@@ -1607,7 +1607,7 @@ background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(231,0,255,1) 51%,
 
 .back-btn:hover {
   background-color: rgb(179,0,255);
-  background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(231,0,255,1) 51%, rgba(255,0,254,1) 100%);
+  background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgbargba(192,192,192) 51%, rgba(255,0,254,1) 100%);
 }
 
 .back-btn-wrap:before {
