--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,12 +2,12 @@
 
 
 /*========== Main Gradient Color : 
-background: rgb(179,0,255);
-background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+background: rgb(192,192,192);
+background: linear-gradient(90deg, rgb(192,192,192) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
 ==========*/
 
 /*========== Button Hover Color Change (Inverse): 
-background: rgb(179,0,255);
+background: rgb(192,192,192);
 background: linear-gradient(-90deg, rgba(192,192,192) 0%, rgba(231,0,255,1) 51%, rgba(255,0,254,1) 100%); 
 ==========*/
 
@@ -22,7 +22,7 @@ Gradient Header Start
   line-height: 1;
   font-size: 2.8rem;
   margin-bottom: 0.6rem;
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -44,7 +44,7 @@ Gradient Header Start
   width: 90px;
   height: 5px;
   border-radius: 3px;
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
@@ -52,7 +52,7 @@ Gradient Header Start
 
 
 .gradient-title-sm {
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
   font-weight: 600;
   font-size: 1.6rem;
   -webkit-background-clip: text;
@@ -62,8 +62,8 @@ Gradient Header Start
 .btn-header {
   display: inline-block;
   padding: 0.85rem 2rem;
-  background-color: rgb(179,0,255);
-  background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(231,0,255,1) 51%, rgba(255,0,254,1) 100%);
+  background-color: rgb(192,192,192);
+  background: linear-gradient(-90deg, rgb(192,192,192) 0%, rgba(231,0,255,1) 51%, rgba(255,0,254,1) 100%);
   color: var(--light-one);
   border-radius: 2rem;
   font-size: 1.05rem;
@@ -73,8 +73,8 @@ Gradient Header Start
 }
 
 .btn-header:hover {
-  background-color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%); 
+  background-color: rgb(192,192,192);
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%); 
 }
 
 /*========== 
@@ -126,8 +126,8 @@ main {
   appearance: none;
   height: 32px;
   width: 65px;
-  background:rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background:rgb(192,192,192);
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
   position: absolute;
   right: 0;
   border-radius: 20px;
@@ -154,8 +154,8 @@ main {
   --light-three: #000000;
 }
 .dark-theme #toggle{
-  background: rgb(179,0,255);
-  background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(231,0,255,1) 51%, rgba(255,0,254,1) 100%);
+  background: rgb(192,192,192);
+  background: linear-gradient(-90deg, rgb(192,192,192) 0%, rgba(231,0,255,1) 51%, rgba(255,0,254,1) 100%);
 }
 .dark-theme #toggle:after{
   background-color: transparent;
@@ -184,8 +184,8 @@ Theme End ==========*/
 :root {
   --dark-one: #333;
   --dark-two: #7a7a7a;
-  --main-color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  --main-color: rgb(192,192,192);
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
   --light-one: #fff;
   --light-two: #f9fafb;
   --light-three: #f6f7fb;
@@ -355,7 +355,7 @@ img {
   width: 90px;
   height: 5px;
   border-radius: 3px;
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
@@ -379,8 +379,8 @@ img {
 .btn {
   display: inline-block;
   padding: 0.85rem 2rem;
-  background-color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(192,192,192) 50%, rgba(255,0,254,1) 95%); 
+  background-color: rgb(192,192,192);
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgba(192,192,192) 50%, rgba(255,0,254,1) 95%); 
   color: var(--light-one);
   border-radius: 2rem;
   font-size: 1.05rem;
@@ -390,8 +390,8 @@ img {
 }
 
 .btn:hover {
-  background-color: rgb(179,0,255);
-  background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(192,192,192) 51%, rgba(255,0,254,1) 100%);
+  background-color: rgb(192,192,192);
+  background: linear-gradient(-90deg, rgb(192,192,192) 0%, rgba(192,192,192) 51%, rgba(255,0,254,1) 100%);
 }
 
 .btn.small {
@@ -445,8 +445,8 @@ nav .container {
 }
 
 .links a.active {
-  background-color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%); 
+  background-color: rgb(192,192,192);
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%); 
   color: var(--light-one);
   border-radius: 2rem;
   font-size: 1rem;
@@ -455,15 +455,15 @@ nav .container {
 }
 
 .links a:hover {
-  color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%); 
+  color: rgb(192,192,192);
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%); 
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent; 
 }
 
 .links a.active:hover {
   color: rgb(255, 255, 255);
-  background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(231,0,255,1) 51%, rgba(255,0,254,1) 100%);
+  background: linear-gradient(-90deg, rgb(192,192,192) 0%, rgba(231,0,255,1) 51%, rgba(255,0,254,1) 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent; 
 }
@@ -535,7 +535,7 @@ nav.open .links {
 .header-title {
   font-size: 3.8rem;
   line-height: 0.8;
-  background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgba(231,0,255,1) 51%, rgba(255,0,254,1) 100%); 
+  background: linear-gradient(-90deg, rgb(192,192,192) 0%, rgba(231,0,255,1) 51%, rgba(255,0,254,1) 100%); 
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -543,7 +543,7 @@ nav.open .links {
 .header-text {
   font-size: 1.50rem;
   line-height: 1.6;
-  background: linear-gradient(-90deg, rgba(179,0,255,1) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(-90deg, rgb(192,192,192) 5%, rgba(231,0,255,1) 50%, rgba(255,0,254,1) 95%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   padding: 20px 0;
@@ -735,8 +735,8 @@ header .circle {
   height: 520px;
   top: 0;
   left: 0;
-  background-color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
+  background-color: rgb(192,192,192);
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
 }
 
 .portfolio .title,
@@ -959,8 +959,8 @@ header .circle {
   width: 0%;
   top: 0;
   left: 0;
-  background-color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
+  background-color: rgb(192,192,192);
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   transition: 1s;
 }
 
@@ -993,8 +993,8 @@ header .circle {
 
 .records {
   position: relative;
-  background-color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
+  background-color: rgb(192,192,192);
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   padding: 5.2rem 0;
 }
 
@@ -1143,7 +1143,7 @@ header .circle {
 .blog-info h5 {
   font-size: 72px;
 
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: 400;
@@ -1219,13 +1219,13 @@ header .circle {
 .rate {
   display: flex;
   font-size: 1.4rem;
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);  -webkit-background-clip: text;
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);  -webkit-background-clip: text;
   margin-bottom: 1.5rem;
 }
 
 .rate i {
   margin-right: 0.3rem; 
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);  -webkit-background-clip: text;
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);  -webkit-background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -1257,7 +1257,7 @@ header .circle {
   bottom: 2.2rem;
   top: initial;
   font-size: 1.8rem;
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -1348,8 +1348,8 @@ header .circle {
   display: inline-block;
   border-radius: 50%;
   background:
-  rgb(179,0,255);
-background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgbargba(192,192,192) 51%, rgba(255,0,254,1) 100%); 
+  rgb(192,192,192);
+background: linear-gradient(-90deg, rgb(192,192,192) 0%, rgbargba(192,192,192) 51%, rgba(255,0,254,1) 100%); 
   color: var(--light-one);
   text-align: center;
   font-size: 1.4rem;
@@ -1472,8 +1472,8 @@ background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgbargba(192,192,192) 
 }
 
 .footer-links a:hover {
-  color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
+  color: rgb(192,192,192);
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent; 
 }
@@ -1500,8 +1500,8 @@ background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgbargba(192,192,192) 
 
 .input-arrow {
   color: #fff;
-  background-color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
+  background-color: rgb(192,192,192);
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1510,8 +1510,8 @@ background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgbargba(192,192,192) 
 }
 
 .input-arrow:hover {
-  background-color: rgb(179,0,255);
-  background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgbargba(192,192,192) 51%, rgba(255,0,254,1) 100%);
+  background-color: rgb(192,192,192);
+  background: linear-gradient(-90deg, rgb(192,192,192) 0%, rgbargba(192,192,192) 51%, rgba(255,0,254,1) 100%);
 }
 
 .focus {
@@ -1534,8 +1534,8 @@ background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgbargba(192,192,192) 
 }
 
 .copyright .text span {
-  color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);  -webkit-background-clip: text;
+  color: rgb(192,192,192);
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   cursor: pointer;
 }
@@ -1550,8 +1550,8 @@ background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgbargba(192,192,192) 
 }
 
 .followme h3 {
-  color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
+  color: rgb(192,192,192);
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: 500;
@@ -1561,15 +1561,15 @@ background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgbargba(192,192,192) 
 .followme .footer-line {
   width: 60px;
   height: 2px;
-  background-color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
+  background-color: rgb(192,192,192);
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   margin: 0 1.2rem;
   display: inline-block;
 }
 
 .social-media a {
-  color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
+  color: rgb(192,192,192);
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 1.3rem;
@@ -1578,8 +1578,8 @@ background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgbargba(192,192,192) 
 }
 
 .social-media a:hover {
-  color: rgb(179,0,255);
-  background: linear-gradient(-90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
+  color: rgb(192,192,192);
+  background: linear-gradient(-90deg, rgb(192,192,192) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -1595,8 +1595,8 @@ background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgbargba(192,192,192) 
   justify-content: center;
   height: 55px;
   width: 55px;
-  background-color: rgb(179,0,255);
-  background: linear-gradient(90deg, rgba(179,0,255,1) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
+  background-color: rgb(192,192,192);
+  background: linear-gradient(90deg, rgb(192,192,192) 5%, rgbargba(192,192,192) 50%, rgba(255,0,254,1) 95%);
   border-radius: 50%;
   color: #fff;
   font-size: 1.2rem;
@@ -1607,8 +1607,8 @@ background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgbargba(192,192,192) 
 }
 
 .back-btn:hover {
-  background-color: rgb(179,0,255);
-  background: linear-gradient(-90deg, rgba(179,0,255,1) 0%, rgbargba(192,192,192) 51%, rgba(255,0,254,1) 100%);
+  background-color: rgb(192,192,192);
+  background: linear-gradient(-90deg, rgb(192,192,192) 0%, rgbargba(192,192,192) 51%, rgba(255,0,254,1) 100%);
 }
 
 .back-btn-wrap:before {
